# sapphire

./: 404.html  Cargo.toml  LICENSE.txt  README.md  chapter_1.html  codecov.yml  index.html  print.html  searchindex.js  searchindex.json  sir.html
.github/workflows/: ci.yaml  gh-pages.yaml
api/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
api/filetest/: all.html  fn.main.html  fn.subtest.html  index.html  opaque..html  sidebar-items.js
api/filetest/discovery/: index.html  (+10 more)
api/sapphire/: all.html  fn.parse_sir.html  fn.run_passes.html  index.html  macro.analysis_preserved.html  macro.arena_key!.html  macro.arena_key.html  macro.dense_arena_key!.html  macro.dense_arena_key.html  sidebar-items.js
api/sirc/: all.html  fn.main.html  fn.run_pass.html  index.html  sidebar-items.js
api/siro/: all.html  fn.main.html  fn.optimize_single_file.html  fn.parse_options.html  index.html  sidebar-items.js
docs/: book.toml
docs/rustdoc/: after.html  before.html
docs/src/: README.md  SUMMARY.md  index.md  sir.md
internals/: codegen-pipeline.html  index.html  parser.html  reg-alloc.html  sir-repr.html
src/: cli.rs  lib.rs  reader.rs  sir.pest
src/analysis/: dominators.rs  flowgraph.rs  graphviz.rs  mod.rs  writer.rs
src/arena/: iter.rs  key.rs  map.rs  mod.rs  secondary.rs  secondary_map.rs  secondary_set.rs  unique.rs
src/codegen/: backend.rs  emitter.rs  isel.rs  legalize_aggregates.rs  mir.rs  mod.rs  options.rs  patterns.rs  rewriter.rs  ssa.rs  target.rs
src/ir/: block.rs  builders.rs  constant.rs  cursor.rs  data_flow.rs  debug.rs  entities.rs  function.rs  inst_builder.rs  instruction.rs  layout.rs  matcher.rs  matchers.rs  mod.rs  module.rs  types.rs  value.rs  visitor.rs
src/pass/: analysis.rs  manager.rs  mod.rs  transform.rs
src/passes/: analysis.rs  manager.rs  mod.rs  transform.rs
src/reader2/: errors.rs  lex.rs  mod.rs  parse.rs
src/transforms/: critical.rs  dce.rs  gvn.rs  mem2reg.rs  mod.rs  printers.rs  sccp.rs  simplify.rs  simplifycfg.rs  simplifyinst.rs  verify.rs
src/utility/: arena.rs  hash.rs  iter.rs  mod.rs  packed_option.rs  spinlock.rs  string_pool.rs  thread_pool.rs  tiny.rs  trees.rs
src/vm/: engine.rs  mod.rs  runtime.rs
tests/codegen/: alloca.sir  alloca_loop.sir  byval.sir  force_spill.sir  i32arith.sir  i32div.sir  i8arith.sir  iadd.sir  max.sir  more_insts.sir  one.sir  simpler.sir  simplify.sir  stack.sir  trivial_gvn.sir  undef.sir  xorshift32.sir
tests/dce/: doesnt_remove_function_params.sir  final_use_dead.sir  ignores_memory.sir  leaves_live_params.sir  leaves_live_stack.sir  removes_dead_stack  rewrites_branches.sir  trivial.sir
tests/domtree/: complex.sir  loops.sir  simple.sir  trivial.sir  unreachable.sir
tests/gvn/: multiple_scope.sir  redundancies_on_all_paths.sir  single_scope.sir  stack.sir
tests/mem2reg/: can_promote_with_existing.sir  cant_promote_volatile.sir  creates_dominating_stackslot.sir  ignores_allocas.sir  ignores_non_promotable.sir  loop.sir  merges_stackslot.sir  multiple.sir  multiple_stackslots_same_stack.sir  single.sir  struct.sir  undef.sir
tests/parse/: blocks.args.complex.pass.sir  blocks.br.nonexistent.fail.sir  blocks.dotlabel.pass.sir  blocks.flat.pass.sir  blocks.params.numbering.fail.sir  blocks.params.simple.pass.sir  call.nonexistent.fail.sir  call.pass.sir  call.wrongargs2.fail.sir  every-inst.pass.sir  fconst.0f.pass.sir  fconst.0xfp.pass.sir  fconst.nan.pass.sir  icmp.alltypes.pass.sir  indirectcall.pass.sir  invalid.fail.sir  load.store.volatile.pass.sir  maintains-names.pass.sir  multiple_fns.pass.sir  paramattributes.decl.pass.sir  paramattributes.defn.pass.sir  paramattributes.fail.sir  retattributes.decl.pass.sir  retattributes.defn.pass.sir  retattributes.fail.sir  sel.pass.sir  stack_slot.nonexistent.fail.sir  stack_slot.pass.sir  types.pass.sir  value.type.wrong.fail.sir  wrong_name.fail.sir
tests/simplifyinst/: doesnt_reorder_non_commutative.sir  move_constant.sir  multiple_worklist_runs.sir  reorders_phis.sir  standard_ordering.sir  udiv_urem.sir
tests/split-crit-edges/: one_crit_edge_no_args.sir  one_crit_edge_with_args.sir  two_crit_edges_no_args.sir
tools/: filetest.html  index.html  sirc.html
tools/filetest/: discovery.rs  display.rs  main.rs  parse.rs  runner.rs  subtest.rs  testcase.rs
tools/playground/: main.rs
tools/sirc/: driver.rs  main.rs  options.rs
tools/siro/: main.rs
x86-64/: calls.html  index.html  legalization.html
(+1174 files in other folders)
