[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sirc"
path = "./tools/sirc/main.rs"

[[bin]]
name = "filetest"
path = "./tools/filetest/main.rs"
test = true
required-features = ["dev-tools"]

[dependencies]
ahash = "0.8.1"
bitflags = "1.3.2"
bpaf = "0.7.7"
pest = "2.5.2"
pest_derive = "2.5.2"
smallbitvec = "2.5.1"
smallvec = { version = "1.10.0", features = ["const_generics", "const_new"] }
static_assertions = "1.1.0"

# enable-serde
serde = { version = "1.0.151", features = ["derive"], optional = true }
serde_test = { version = "1.0.151", optional = true }

# dev-tools
ansi_term = { version = "0.12.1", optional = true }
diff = { version = "0.1.13", optional = true }
threadpool = { version = "1.8.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["enable-serde", "dev-tools"]
dev-tools = ["dep:ansi_term", "dep:diff", "dep:threadpool", "dep:lazy_static"]
enable-serde = ["dep:serde", "dep:serde_test", "smallvec/serde"]