[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sirc"
path = "./tools/sirc/main.rs"

[[bin]]
name = "playground"
path = "./tools/playground/main.rs"
required-features = ["dev-tools", "playground"]

[[bin]]
name = "filetest"
path = "./tools/filetest/main.rs"
test = true
required-features = ["dev-tools"]

[[bin]]
name = "siro"
path = "./tools/siro/main.rs"
required-features = ["dev-tools"]

[profile.release]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
debug-assertions = false

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.147", optional = true }

[dependencies]
ahash = "0.8.1"
paste = "1.0.11"
pest = "2.5.2"
pest_derive = "2.5.2"
smallbitvec = "2.5.1"
smallvec = { version = "1.10.0", features = ["const_generics", "const_new"] }
static_assertions = "1.1.0"
unicode-segmentation = "1.10.1"

# enable-serde
serde = { version = "1.0.151", features = ["derive", "rc"], optional = true }
serde_test = { version = "1.0.151", optional = true }

# dev-tools
ansi_term = { version = "0.12.1", optional = true }
backtrace = { version = "0.3.67", optional = true }
diff = { version = "0.1.13", optional = true }
threadpool = { version = "1.8.1", optional = true }
bpaf = { version = "0.9.0", optional = true }

# playground
tempus_fugit = { version = "0.11", optional = true }

[features]
default = ["enable-serde", "dev-tools"]
dev-tools = ["dep:ansi_term", "dep:diff", "dep:threadpool", "dep:backtrace", "dep:bpaf", "dep:windows-sys", "dep:libc"]
enable-serde = ["dep:serde", "dep:serde_test", "smallvec/serde"]
playground = ["dep:tempus_fugit"]